# haxagon-grades-edupage

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md  create_task.py  pyproject.toml  script.py
context/: test-strategy.md
data/: Haxagon_seznam_uloh.ods  Haxagon_seznam_uloh_2026_02_19.csv  README.md  classroom_grades_801460822073_2026-05-22.csv  classroom_grades_801461639766_2026-05-22.csv  edupage_classroom_grades_801460822073_2026-05-22.csv  edupage_classroom_grades_801461639766_2026-05-22.csv  edupage_export_2026_05_22.csv  jpg_grades_diff.csv  jpg_grades_export.csv  jpg_grades_export_edupage.csv  png_diff_2026_05_22.csv  seznam_uloh_CPU.csv  seznam_uloh_JS.csv  seznam_uloh_JS.ods  seznam_uloh_futureCoder.csv  test_grades_2_png.csv  znamky.html  znamky_rewrite.html
docs/: ARCHITECTURE.md  TASK_SEQUENCE.md
product/features/: FEATURE-001-cli-edupage-automation.md
project/done/: TASK-001-clean-project-fixtures-and-docs.md  TASK-002-export-grades-to-csv.md  TASK-003-export-grade-categories.md
src/edu_page_automat/: __init__.py  auth_manager.py  auth_storage.py  classroom_grades.py  cli.py  grade_diff.py  logging_config.py  playwright_browsers.py  scenario_runner.py  setup_login.py
src/edu_page_automat/scenarios/: __init__.py  base.py  create_task.py  export_grades.py  fill_grades.py
src/haxagon_grades_edupage/: auth_manager.py  cli.py  run_scenario.py  scenario_runner.py  setup_login.py  use_session.py
src/haxagon_grades_edupage/scenarios/: base.py  create_task.py  grades.py  timetable.py
tests/: test_auth_manager.py  test_classroom_grades.py  test_cli.py  test_create_task.py  test_export_grades.py  test_fill_grades.py  test_grade_diff.py  test_playwright_browsers.py  test_scenario_runner.py
tools/playwright_recordings/: README.md  create_task_recording.py  fill_grade_recording.py  rewrite_grade_recording.py
