[project]
name = "haxagon-grades-edupage"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Kopecký",email = "kopecky.d@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "loguru (>=0.7.0,<1.0.0)"
]

[tool.poetry]
packages = [{include = "haxagon_grades_edupage", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
