[project]
name = "haxagon-grades-edupage"
version = "0.3.0"
description = ""
authors = [
    {name = "Daniel Kopecký",email = "kopecky.d@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)",
    "click (>=8.3.0,<9.0.0)",
    "loguru (>=0.7.0,<1.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[project.scripts]
haxagon-grades-edupage = "haxagon_grades_edupage.cli:cli"

[tool.poetry]
packages = [{include = "haxagon_grades_edupage", from = "src"}]

[tool.poetry.scripts]
haxagon-grades-edupage = "haxagon_grades_edupage.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
