[project]
name = "EduPageAutomat"
version = "0.10.0"
description = ""
authors = [
    {name = "Daniel Kopecký",email = "kopecky.d@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)",
    "loguru (>=0.7.0,<1.0.0)",
    "typer (>=0.26.7,<0.27.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"

[project.scripts]
edupage = "edu_page_automat.cli:main"

[tool.poetry]
packages = [{include = "edu_page_automat", from = "src"}]

[tool.poetry.scripts]
edupage = "edu_page_automat.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
